--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vundle"]
-	path = vundle
-	url = git://github.com/gmarik/vundle.git
+[submodule "bundle/vundle"]
+	path = bundle/vundle
+	url = git@github.com:gmarik/vundle
