--- a/.dryrunsecurity.yaml
+++ b/.dryrunsecurity.yaml
@@ -1,7 +1,7 @@
 sensitiveCodepaths:
   # Files only allowed authors can modify
   # - 'app.js'
-  # - 'controllers/**/*.js'
+  # - 'Makefile'
 allowedAuthors:
   usernames:
     # GitHub username
